--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm start\" \"cd ../client && npm start\""
+    "dev": "concurrently \"\"npm start\"\"num run client\""
   },
   "keywords": [],
   "author": "Vivek Bhos",
